--- a/sass/_sea-serpent.scss
+++ b/sass/_sea-serpent.scss
@@ -1,7 +1,9 @@
 .sea-serpent {
   &__container {
     grid-column: col-end 4 / full-end;
-    background-color: blue;
     display: grid;
+  }
+  &__content {
+    background-color: red;
   }
 }
