--- a/css/style.css
+++ b/css/style.css
@@ -670,5 +670,7 @@ left position as 0. This is for 0 to 5% of the animation */
 
 .sea-serpent__container {
   grid-column: col-end 4 / full-end;
-  background-color: blue;
   display: grid; }
+
+.sea-serpent__content {
+  background-color: red; }
