--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -58,6 +58,8 @@ body {
   // why only name the columns and not the rows?
   // in overall layout focus is generally on the columns and not the rows - columns more important
   @media only screen and (max-width: $bp-large) {
-    grid-template-rows: 10rem 10rem calc(100vh - 20rem) calc(100vh - 20rem);
+    grid-template-rows: 10rem 10rem calc(100vh - 20rem) calc(100vh - 20rem) calc(
+        100vh - 20rem
+      );
   }
 }
