--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -13,6 +13,7 @@
   /* large being 87.5em - 1400px */
   @media only screen and (max-width: $bp-largest) {
     margin: 5rem 0;
+    grid-row: 7 / 8;
   }
 }
 
