--- a/sass/_sea-serpent.scss
+++ b/sass/_sea-serpent.scss
@@ -1,6 +1,9 @@
 .sea-serpent {
   &__container {
     grid-column: col-end 4 / full-end;
+    @media only screen and (max-width: $bp-large) {
+      grid-column: full-start / full-end;
+    }
     display: grid;
   }
   &__content {
